<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/addpatientrelativelayout">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:fitsSystemWindows="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="10dp">

                <!-- Patient ID -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/AddeditTextPatientid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                        android:ems="10"
                        android:hint="@string/patient_id"
                        android:inputType="textCapCharacters"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <!-- FirstName -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/AddeditTextFirstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                        android:ems="10"
                        android:hint="@string/first_name"
                        android:inputType="textCapWords"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <!-- LastName -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/AddeditTextLastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz "
                        android:ems="10"
                        android:hint="@string/last_name"
                        android:inputType="textCapWords"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <!--  Radio Button -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-10dp"
                    android:layout_marginTop="8dp">

                    <LinearLayout
                        android:id="@+id/genderlinearlayout"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_gravity="center_horizontal"
                        android:weightSum="1">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="30dp"
                            android:layout_height="30dp" />

                        <RadioButton
                            android:id="@+id/radioButton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.41"
                            android:checked="false"
                            android:text="Male"
                            android:textSize="17sp"
                            tools:ignore="HardcodedText" />

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="30dp"
                            android:layout_height="30dp" />

                        <RadioButton
                            android:id="@+id/radioButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Female"
                            android:textSize="17sp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                </android.support.design.widget.TextInputLayout>

                <!-- DOB -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/AddingDOBeditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.60"
                        android:ems="10"
                        android:focusable="false"
                        android:hint="@string/dob"
                        android:inputType="date"
                        android:maxLines="1"
                        android:minLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <!-- Address -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/AddeditTextAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/address"
                        android:inputType="textCapWords"
                        android:maxLength="100"
                        android:maxLines="3"
                        android:windowSoftInputMode="adjustResize" />
                </android.support.design.widget.TextInputLayout>

                <!-- Mobile Number -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/AddeditTextMobilenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:digits="0123456789"
                        android:ems="10"
                        android:hint="@string/mobilenumber"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:windowSoftInputMode="adjustResize" />
                </android.support.design.widget.TextInputLayout>

                <!-- Consultant -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/AddeditTextConsultant"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz ."
                        android:ems="10"
                        android:hint="@string/consultant"
                        android:inputType="textCapWords"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <!-- Signup Button -->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/AddbuttonSave"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp"
                    android:background="@color/RoyalBlue"
                    android:padding="12dp"
                    android:text="Save"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>